fix horizontal scroll
hor scroll since header width - fix

--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -4,7 +4,7 @@
   position: fixed;
   padding: 0 5%;
   left: 0;
-  width: 100vw;
+  width: 100%;
   z-index: 5;
 
   &__wrapper {
